# Shared-context

./: README.md  SPEC.md  SUBAGENT_SPEC.md  pyproject.toml
examples/: anthropic_agent_loop.py  capa_process.py  multi_agent.py  openai_agent_loop.py
shared_context/: __init__.py  anthropic.py  errors.py  openai.py  schema.py  session.py  store.py  tool.py
subagent/: __init__.py  anthropic.py  errors.py  openai.py  registry.py  schema.py  task.py  tool.py
tests/: test_anthropic.py  test_openai.py  test_schema.py  test_session.py  test_store.py  test_subagent_anthropic.py  test_subagent_core.py  test_subagent_openai.py  test_subagent_schema.py
