[project]
name = "shared-context"
version = "0.1.0"
description = "Reference implementation of the Shared Context and Subagent Tool specifications"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest>=7"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["shared_context*", "subagent*"]
